--- a/basics.ipynb
+++ b/basics.ipynb
@@ -1432,12 +1432,300 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "63b10d17",
    "metadata": {},
+   "source": [
+    "# 1.3: Advanced Data Structures and Functions - Exercises\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26ff021d",
+   "metadata": {},
+   "source": [
+    "## Dictionaries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "fb6741af",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "movie = {\n",
+    "    'title':'harry potter',\n",
+    "    'director':'j.k rowling',\n",
+    "    'year': 1997,\n",
+    "    'genre':'fantasy literature',\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "40480a8b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "harry potter\n",
+      "fantasy literature\n",
+      "1997\n",
+      "j.k rowling\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(movie['title'])\n",
+    "print(movie['genre'])\n",
+    "print(movie['year'])\n",
+    "print(movie['director'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "686c6019",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'title': 'harry potter',\n",
+       " 'director': 'j.k rowling',\n",
+       " 'year': 1997,\n",
+       " 'genre': 'fantasy literature',\n",
+       " 'rating': 9.9}"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movie['rating'] = 9.9\n",
+    "movie"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "4e50eedb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'title': 'harry potter',\n",
+       " 'director': 'j.k rowling',\n",
+       " 'year': 'November 16, 2001',\n",
+       " 'genre': 'fantasy literature',\n",
+       " 'rating': 9.9}"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movie['year'] = f'November {16}, {2001}'\n",
+    "movie"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "e507a6b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del movie['genre']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "97c88d1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'title': 'harry potter', 'director': 'j.k rowling', 'year': 'November 16, 2001', 'rating': 9.9}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(movie)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "84d6eb1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['title', 'director', 'year', 'rating'])"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movie.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "0f90f34c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_values(['harry potter', 'j.k rowling', 'November 16, 2001', 9.9])"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movie.values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "15833ddd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_items([('title', 'harry potter'), ('director', 'j.k rowling'), ('year', 'November 16, 2001'), ('rating', 9.9)])"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m = movie.items()\n",
+    "m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "94a31002",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('title', 'harry potter')\n",
+      "('director', 'j.k rowling')\n",
+      "('year', 'November 16, 2001')\n",
+      "('rating', 9.9)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in m:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "ad112fb1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(56, 11)\n",
+      "(12, 3)\n",
+      "(13, 4)\n",
+      "[1, 22, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [(56,11),(12,3),(13,4),[1,22,3]]\n",
+    "for _ in a:\n",
+    "    print(_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "ecf23238",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "unknown\n"
+     ]
+    }
+   ],
+   "source": [
+    "if movie.get('producer'):\n",
+    "    print(movie['producer'])\n",
+    "else:\n",
+    "    print('unknown')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "832a4f7c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "November 16, 2001\n"
+     ]
+    }
+   ],
+   "source": [
+    "if movie.get('year'):\n",
+    "    print(movie['year'])\n",
+    "else:\n",
+    "    print('unknown')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6828c1b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if "
+   ]
   }
  ],
  "metadata": {
