--- a/basics.ipynb
+++ b/basics.ipynb
@@ -2694,30 +2694,371 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 8,
    "id": "cea50528",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<function __main__.<lambda>(a, b=1)>"
+       "{1: 1, 2: 2, 3: 6, 4: 24, 5: 120}"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "c= lambda a,b=1: (a*b, lambda c: (a*b, b+1))\n",
-    "c"
+    "b = {}\n",
+    "n = 6\n",
+    "a = 1\n",
+    "for i in range(1,n):\n",
+    "    a *= i\n",
+    "    b[i] = a\n",
+    "\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "219b232c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def factorial(n):\n",
+    "    result = 1\n",
+    "    for i in range(1, n + 1):\n",
+    "        result *= i\n",
+    "    return result\n",
+    "factorial(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "c21cef36",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = [1, 2, 3, 2, 4, 5, 4, 1]\n",
+    "unique_numbers = set(numbers)\n",
+    "squared_values = [num ** 2 for num in unique_numbers]\n",
+    "print(squared_values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "ea965fb9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = [1, 2, 3, 2, 4, 5, 4, 1]\n",
+    "unique_numbers = (num for num in numbers if numbers.count(num) == 1)\n",
+    "print(list(unique_numbers))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05355074",
+   "metadata": {},
+   "source": [
+    "# Error Handling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "95c7fe8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "error\n"
+     ]
+    }
+   ],
+   "source": [
+    "index = int(input('enter an index'))\n",
+    "my_list = [10, 20, 30, 40]\n",
+    "try:\n",
+    "    my_list[index]\n",
+    "except IndexError :\n",
+    "    print(\"error\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "56368d1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "incorrect\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_list = [10, 20, 30, 40]\n",
+    "try:\n",
+    "    index = int(input('enter an index'))\n",
+    "    my_list[index]\n",
+    "except IndexError :\n",
+    "    print(\"error\")\n",
+    "except ValueError :\n",
+    "    print(\"incorrect\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "154cc725",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "error\n",
+      "division attempt finished.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def divide(a, b):\n",
+    "    try:\n",
+    "        result =  a / b\n",
+    "    except ZeroDivisionError:\n",
+    "        print('error')\n",
+    "    else:\n",
+    "        print('Result:', result)\n",
+    "    finally:\n",
+    "        print('division attempt finished.')\n",
+    "\n",
+    "divide(2,0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4265182",
+   "metadata": {},
+   "source": [
+    "## Raising Exceptions and Assertions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "702d87f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Password is strong.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def check_password_strength(password):\n",
+    "    password = str(password)\n",
+    "    if len(password) < 8:\n",
+    "        print('Password is too short!')\n",
+    "    elif len(password) >= 8:\n",
+    "       print('Password is strong.')\n",
+    "\n",
+    "try:\n",
+    "    user_password = input('Enter your password: ')\n",
+    "    check_password_strength(user_password)\n",
+    "except Exception as e:\n",
+    "     print('Error:', e )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "64ff96b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16.0\n",
+      "17.8\n"
+     ]
+    }
+   ],
+   "source": [
+    "def calculate_discount(price, discount_percent):\n",
+    "    assert 100 >= discount_percent >= 0, 'invalid discount percentage'\n",
+    "    return price - price * discount_percent / 100\n",
+    "\n",
+    "print(calculate_discount(20,20))\n",
+    "print(calculate_discount(20, 11))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e2e0e58",
+   "metadata": {},
+   "source": [
+    "# 1.5: Object-Oriented Programming (OOP) - Exercises"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8bf0a357",
+   "metadata": {},
+   "source": [
+    "## Creating Classes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "eb474043",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The car is moving.\n",
+      "The car has stopped.\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Car:\n",
+    "    wheels = 4\n",
+    "    \n",
+    "    def drive(self):\n",
+    "        self.moving = True\n",
+    "        self.stopped = False\n",
+    "        return 'The car is moving.'\n",
+    "    def stop(self):\n",
+    "        self.moving = False\n",
+    "        self.stopped = True\n",
+    "        return 'The car has stopped.'\n",
+    "\n",
+    "my_car = Car()\n",
+    "print(my_car.drive())\n",
+    "print(my_car.stop())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "d9ba190d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'This is a 2020 Ford, Mustang.'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Car:\n",
+    "    wheels = 4\n",
+    "    \n",
+    "    def __init__(self, make = 'Ford', model = 'Mustang', year = 2020):\n",
+    "        self.make = make\n",
+    "        self.model = model\n",
+    "        self.year = year\n",
+    "\n",
+    "    def describe(self):\n",
+    "        return f'This is a {self.year} {self.make}, {self.model}.'\n",
+    "\n",
+    "Car.describe(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "a6a13251",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'This is a 2020 Ford Mustang.'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Car:\n",
+    "    wheels = 4\n",
+    "    \n",
+    "    def __init__(self, make, model, year):\n",
+    "        self.make = make\n",
+    "        self.model = model\n",
+    "        self.year = year\n",
+    "\n",
+    "    def describe(self):\n",
+    "        return f'This is a {self.year} {self.make} {self.model}.'\n",
+    "\n",
+    "my_car = Car('Ford', 'Mustang', 2020)\n",
+    "my_car.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aad66b53",
+   "metadata": {},
+   "source": [
+    "## Inheritance"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "897752e8",
+   "id": "18f6f1e9",
    "metadata": {},
    "outputs": [],
    "source": []
