--- a/basics.ipynb
+++ b/basics.ipynb
@@ -3602,13 +3602,506 @@
    "id": "019637f2",
    "metadata": {},
    "source": [
-    "## 1.6: Advanced Data Structures and Iterators - Exercises"
+    "# 1.6: Advanced Data Structures and Iterators - Exercises"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3efcc7a",
+   "metadata": {},
+   "source": [
+    "## *args and **kwargs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "2d4eda05",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.0 , 15.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def calculate_average(*args):\n",
+    "    if len(args) == 0:\n",
+    "        return 'Please enter numbers.'\n",
+    "    return sum(args) / len(args)\n",
+    "\n",
+    "print(calculate_average(1,2,3,4,5),',', calculate_average(10,20))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "104ee947",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name : Alex\n",
+      "Age : 28\n",
+      "City : New York\n"
+     ]
+    }
+   ],
+   "source": [
+    "def print_profile(**kwargs):\n",
+    "    for key,value in kwargs.items():\n",
+    "        print(f'{key.capitalize()} : {value}')\n",
+    "\n",
+    "print_profile(name=\"Alex\", age=28, city=\"New York\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "232d0595",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Customer's Name: Bob\n",
+      "List of Items Ordered: Pizza, Coke\n",
+      "Delivery Time: 6 PM\n",
+      "Address: 123 Main St\n"
+     ]
+    }
+   ],
+   "source": [
+    "def process_order(customer_name, *items, **details):\n",
+    "    print(f'Customer\\'s Name: {customer_name}')\n",
+    "    print(f'List of Items Ordered: {\", \".join(items)}')\n",
+    "    for key, value in details.items():\n",
+    "        print(f'{key.replace(\"_\", \" \").title()}: {value}')\n",
+    "\n",
+    "process_order(\"Bob\", \"Pizza\", \"Coke\", delivery_time=\"6 PM\", address=\"123 Main St\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ddc6755",
+   "metadata": {},
+   "source": [
+    "## Generators and Iterators"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "23d4b2d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "def countdown(start):\n",
+    "    while start > 0:\n",
+    "        yield start\n",
+    "        start -=1\n",
+    "\n",
+    "for num in countdown(5):\n",
+    "    print(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "afe89b87",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 5, 6, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "words = [\"hello\", \"world\", \"python\", \"is\", \"fun\"]\n",
+    "word_lengths = (len(word) for word in words)\n",
+    "print(list(word_lengths))\n",
+    "#or result = list(map(len, words))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0591ed88",
+   "metadata": {},
+   "source": [
+    "## Decorators"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "8862b312",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HELLO, I AM A FUNCTION.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def shout(function):\n",
+    "    def wrapper():\n",
+    "        return function().upper()\n",
+    "    return wrapper\n",
+    "\n",
+    "@shout\n",
+    "def greet():\n",
+    "    return \"Hello, I am a function.\"\n",
+    "\n",
+    "print(greet()) \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "c6df2c72",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi!\n",
+      "Hi!\n",
+      "Hi!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def repeat(n):\n",
+    "    def decorator(func):\n",
+    "        def wrapper():\n",
+    "            for _ in range(n):\n",
+    "                func()\n",
+    "        return wrapper\n",
+    "    return decorator\n",
+    "\n",
+    "\n",
+    "@repeat(3)\n",
+    "def say_hi():\n",
+    "    print(\"Hi!\")\n",
+    "\n",
+    "\n",
+    "say_hi()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f1083e3",
+   "metadata": {},
+   "source": [
+    "## Pathlib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "66b2e936",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\asgar_b5z8lmb\\OneDrive\\Masaüstü\\div\n",
+      "log.txt\n",
+      "data\\processed\n",
+      ".txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "print(Path.cwd())\n",
+    "\n",
+    "file_path = Path(\"data/processed/log.txt\")\n",
+    "\n",
+    "print(file_path.name)\n",
+    "print(file_path.parent)\n",
+    "print(file_path.suffix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "ed8a8067",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello from Pathlib!\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "text_file = Path('pathlib_test.txt')\n",
+    "text_file.write_text('Hello from Pathlib!')\n",
+    "content = text_file.read_text()\n",
+    "\n",
+    "print(content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "id": "8c2d1e7e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "temp.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "dir_path = Path('my_new_folder')\n",
+    "dir_path.mkdir(exist_ok = True)\n",
+    "\n",
+    "dir_file_path = dir_path / 'temp.txt'\n",
+    "dir_file_path.write_text('Hello World! Am I a human?')\n",
+    "\n",
+    "for item in dir_path.iterdir():\n",
+    "    print(item.name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12843692",
+   "metadata": {},
+   "source": [
+    "## File I/O and Standard Library"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "id": "be120b60",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First line\n",
+      "Second line\n",
+      "Third line\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "lines_to_write = [\"First line\", \"Second line\", \"Third line\"]\n",
+    "my_file = Path('my_file.txt')\n",
+    "my_file.write_text('\\n'.join(lines_to_write))\n",
+    "\n",
+    "print(my_file.read_text())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "id": "ef8174b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({'red': 3, 'blue': 2, 'green': 1})\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "\n",
+    "votes = ['red','blue','red','green','blue','red']\n",
+    "\n",
+    "print(Counter(votes))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "id": "287069a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('S', 'black'), ('S', 'white'), ('M', 'black'), ('M', 'white'), ('L', 'black'), ('L', 'white')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from itertools import product\n",
+    "\n",
+    "sizes = ['S', 'M', 'L']\n",
+    "colours = ['black', 'white']\n",
+    "\n",
+    "final_product = product(sizes, colours)\n",
+    "\n",
+    "print(list(final_product))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43a876b8",
+   "metadata": {},
+   "source": [
+    "# 2.1: NumPy - Exercises"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3cf77933",
+   "metadata": {},
+   "source": [
+    "## NumPy Array Creation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "id": "9d332c33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "arr1 = [1,2,3,4,5]\n",
+    "arr2 = [[1,2,3], [4,5,6]]\n",
+    "arr3 = np.zeros(10)\n",
+    "arr4 = np.ones((3,4))\n",
+    "arr5 = np.arange(10)\n",
+    "arr6 = np.linspace(0,1,5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a30eb17",
+   "metadata": {},
+   "source": [
+    "## Array Attributes and Indexing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "id": "fc990968",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 3)\n",
+      "2\n",
+      "9\n",
+      "int32\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "arr_random = np.random.randint(1,101, size=(3,3))\n",
+    "\n",
+    "print(arr_random.shape)\n",
+    "print(arr_random.ndim)\n",
+    "print(arr_random.size)\n",
+    "print(arr_random.dtype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "id": "57d40f04",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n",
+      "[12 13 14 15]\n",
+      "[[ 1  2  3  4]\n",
+      " [ 5  6  7  8]\n",
+      " [ 9 10 11 12]\n",
+      " [13 14 15 16]]\n",
+      "7\n",
+      "[[3 4]\n",
+      " [7 8]]\n",
+      "[ 3  7 11 15]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "arr_a = np.arange(10,20)\n",
+    "\n",
+    "print(arr_a[3])\n",
+    "print(arr_a[2:6])\n",
+    "\n",
+    "arr_b = np.arange(1,17).reshape(4,4)\n",
+    "\n",
+    "print(arr_b) \n",
+    "print(arr_b[1,2])\n",
+    "print(arr_b[:2, 2:])\n",
+    "print(arr_b[:,2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f88b309",
+   "metadata": {},
+   "source": [
+    "## Array Operations and Universal Functions (ufuncs)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d4eda05",
+   "id": "993972f9",
    "metadata": {},
    "outputs": [],
    "source": []
