--- a/basics.ipynb
+++ b/basics.ipynb
@@ -4100,8 +4100,274 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "993972f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x + y = [5 7 9]\n",
+      "x * 3 = [3 6 9]\n",
+      "x ** 2 = [1 4 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "x = np.array([1,2,3])\n",
+    "y = np.array([4,5,6])\n",
+    "\n",
+    "print(\"x + y =\", x + y)\n",
+    "print(\"x * 3 =\", x * 3)\n",
+    "print(\"x ** 2 =\", x ** 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "966a1806",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1. 2. 3. 4. 5.]\n",
+      "[0.0000000e+00 1.0000000e+00 1.2246468e-16]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "z = np.array([1, 4, 9, 16, 25])\n",
+    "angles = np.array([0, np.pi/2 , np.pi])\n",
+    "\n",
+    "print(np.sqrt(z))\n",
+    "print(np.sin(angles))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b8d19d6",
+   "metadata": {},
+   "source": [
+    "## Broadcasting and Aggregate Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "edd05fc9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[11 22 33]\n",
+      " [14 25 36]\n",
+      " [17 28 39]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "matrix = np.arange(1,10).reshape(3,3)\n",
+    "vector = np.array([10,20,30])\n",
+    "\n",
+    "print(matrix + vector)\n",
+    "\n",
+    "# matrix + np.array([100,200])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "831cae04",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "555\n",
+      "37.0\n",
+      "83\n",
+      "[ 67  63  88 116 221]\n",
+      "[27.6 39.2 44.2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np \n",
+    "data = np.random.randint(0,100, size=(3,5))\n",
+    "\n",
+    "print(data.sum())\n",
+    "print(data.mean())\n",
+    "print(data.max())\n",
+    "print(data.sum(axis=0))\n",
+    "print(data.mean(axis=1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95e94bca",
+   "metadata": {},
+   "source": [
+    "## Reshaping and Stacking"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "ae91cdbb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 0  1  2]\n",
+      "  [ 3  4  5]]\n",
+      "\n",
+      " [[ 6  7  8]\n",
+      "  [ 9 10 11]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np \n",
+    "\n",
+    "rshparrs = np.arange(12)\n",
+    "rshparrs1 = rshparrs.reshape(3,4) \n",
+    "rshparrs2 = rshparrs.reshape(4,3)\n",
+    "rshparrs3 = rshparrs2.reshape(2,2,3)\n",
+    "\n",
+    "print(rshparrs3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "afe6cec3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[51 40 74 69]\n",
+      " [36 37 21 88]]\n",
+      "\n",
+      "[[51 40]\n",
+      " [36 37]\n",
+      " [74 69]\n",
+      " [21 88]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np \n",
+    "\n",
+    "m1 = np.random.randint(0,100, size=(2,2))\n",
+    "m2 = np.random.randint(0,100, size=(2,2))\n",
+    "\n",
+    "print(np.hstack((m1, m2)))\n",
+    "print()\n",
+    "print(np.vstack((m1,m2)))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "960e5a9e",
+   "metadata": {},
+   "source": [
+    "## Advanced Operations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "id": "adf15c81",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 0 0 0 0 0 1 2 3 4 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "nums = np.arange(-5,6)\n",
+    "\n",
+    "nums[nums>0] \n",
+    "nums[nums<0] = 0\n",
+    "\n",
+    "print(nums)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "id": "1913b15c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(32)"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "v1 = np.array([1, 2, 3])\n",
+    "v2 = np.array([4, 5, 6])\n",
+    "\n",
+    "np.dot(v1,v2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "id": "3a07e7a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 3 32]\n",
+      " [15 24]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "mat1 = np.random.randint(0,10, size=(2,2))\n",
+    "mat2 = np.random.randint(0,10, size=(2,2))\n",
+    "\n",
+    "np.dot(mat1, mat2)\n",
+    "print(mat1@mat2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af0e5efe",
    "metadata": {},
    "outputs": [],
    "source": []
