--- a/basics.ipynb
+++ b/basics.ipynb
@@ -4000,7 +4000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 1,
    "id": "9d332c33",
    "metadata": {},
    "outputs": [],
@@ -4025,7 +4025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 2,
    "id": "fc990968",
    "metadata": {},
    "outputs": [
@@ -4053,7 +4053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 3,
    "id": "57d40f04",
    "metadata": {},
    "outputs": [
@@ -4100,7 +4100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "993972f9",
    "metadata": {},
    "outputs": [
@@ -4127,7 +4127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "966a1806",
    "metadata": {},
    "outputs": [
@@ -4160,7 +4160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "id": "edd05fc9",
    "metadata": {},
    "outputs": [
@@ -4187,7 +4187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 7,
    "id": "831cae04",
    "metadata": {},
    "outputs": [
@@ -4195,11 +4195,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "555\n",
-      "37.0\n",
-      "83\n",
-      "[ 67  63  88 116 221]\n",
-      "[27.6 39.2 44.2]\n"
+      "825\n",
+      "55.0\n",
+      "93\n",
+      "[152 181 155 143 194]\n",
+      "[69.2 30.4 65.4]\n"
      ]
     }
    ],
@@ -4224,7 +4224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 8,
    "id": "ae91cdbb",
    "metadata": {},
    "outputs": [
@@ -4253,7 +4253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 9,
    "id": "afe6cec3",
    "metadata": {},
    "outputs": [
@@ -4261,13 +4261,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[51 40 74 69]\n",
-      " [36 37 21 88]]\n",
+      "[[19 29 67 39]\n",
+      " [90 97 75 72]]\n",
       "\n",
-      "[[51 40]\n",
-      " [36 37]\n",
-      " [74 69]\n",
-      " [21 88]]\n"
+      "[[19 29]\n",
+      " [90 97]\n",
+      " [67 39]\n",
+      " [75 72]]\n"
      ]
     }
    ],
@@ -4292,7 +4292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 10,
    "id": "adf15c81",
    "metadata": {},
    "outputs": [
@@ -4317,7 +4317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 11,
    "id": "1913b15c",
    "metadata": {},
    "outputs": [
@@ -4327,7 +4327,7 @@
        "np.int64(32)"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4343,7 +4343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 12,
    "id": "3a07e7a2",
    "metadata": {},
    "outputs": [
@@ -4351,8 +4351,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 3 32]\n",
-      " [15 24]]\n"
+      "[[60 43]\n",
+      " [ 8  6]]\n"
      ]
     }
    ],
@@ -4365,9 +4365,593 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "af0e5efe",
+   "metadata": {},
+   "source": [
+    "# 2.2.1: Pandas Series - Exercises"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "451a1aad",
+   "metadata": {},
+   "source": [
+    "## Creating Pandas Series"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "6bea5e1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pandas in c:\\users\\asgar_b5z8lmb\\miniconda3\\envs\\ds\\lib\\site-packages (2.3.3)\n",
+      "Requirement already satisfied: numpy>=1.23.2 in c:\\users\\asgar_b5z8lmb\\miniconda3\\envs\\ds\\lib\\site-packages (from pandas) (2.3.5)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\asgar_b5z8lmb\\miniconda3\\envs\\ds\\lib\\site-packages (from pandas) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\asgar_b5z8lmb\\miniconda3\\envs\\ds\\lib\\site-packages (from pandas) (2025.2)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\asgar_b5z8lmb\\miniconda3\\envs\\ds\\lib\\site-packages (from pandas) (2025.2)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\asgar_b5z8lmb\\miniconda3\\envs\\ds\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "13be3e07",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    10\n",
+       "1    20\n",
+       "2    30\n",
+       "3    40\n",
+       "4    50\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "pds = pd.Series([10,20,30,40,50])\n",
+    "pds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ae902ac8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "a    5.5\n",
+       "b    6.0\n",
+       "c    6.5\n",
+       "d    7.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "pdv = pd.Series([5.5, 6.0, 6.5, 7])\n",
+    "pdv.index = ['a','b','c','d']\n",
+    "# pdv = pd.Series([5.5, 6.0, 6.5, 7], index=['a', 'b', 'c', 'd'])\n",
+    "pdv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "8899c813",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "London : 8.9M\n",
+      "Paris : 2.1M\n",
+      "New York : 8.4M\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "dictppct = {'London': 8.9 ,'Paris': 2.1, 'New York': 8.4}\n",
+    "\n",
+    "pddictppct = pd.Series(dictppct)\n",
+    "\n",
+    "for city, pop in pddictppct.items():\n",
+    "    print(f'{city} : {pop}M')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21eebd29",
+   "metadata": {},
+   "source": [
+    "## Indexing and Slicing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "50526229",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.5\n",
+      "6.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "print(pdv.loc['c'])\n",
+    "print(pdv.iloc[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "b1896904",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    a\n",
+      "1    b\n",
+      "2    c\n",
+      "3    d\n",
+      "4    e\n",
+      "5    f\n",
+      "6    g\n",
+      "7    h\n",
+      "8    i\n",
+      "9    j\n",
+      "dtype: object\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3    d\n",
+       "4    e\n",
+       "5    f\n",
+       "6    g\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import string\n",
+    "\n",
+    "pdsa = pd.Series(list(string.ascii_lowercase[:10]), index= range(10))\n",
+    "\n",
+    "print(pdsa)\n",
+    "\n",
+    "pdsa[3:7]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f610ed9",
+   "metadata": {},
+   "source": [
+    "## Series Operations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "76c79e74",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    11\n",
+      "1    22\n",
+      "2    33\n",
+      "3    44\n",
+      "dtype: int64\n",
+      "0     5\n",
+      "1    10\n",
+      "2    15\n",
+      "3    20\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "series1 = pd.Series([1,2,3,4])\n",
+    "series2 = pd.Series([10,20,30,40])\n",
+    "\n",
+    "print(series1 + series2)\n",
+    "print(series1 * 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "d218381a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a     NaN\n",
+      "b    50.0\n",
+      "c     NaN\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "series3 = pd.Series([10,20], index=['a','b'])\n",
+    "series4 = pd.Series([30,40], index=['b', 'c'])\n",
+    "\n",
+    "print(series3 + series4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21d4f192",
+   "metadata": {},
+   "source": [
+    "## Conditional Logic and Filtering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "a7cdcbed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0     1\n",
+      "2    10\n",
+      "8     6\n",
+      "9     2\n",
+      "dtype: int32\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "pnp = pd.Series(np.random.randint(-10, 11, size=10))\n",
+    "\n",
+    "#pnp[pnp.where(pnp<0).isna()]\n",
+    "print(pnp[pnp>0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "ef7e9ad5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     1\n",
+       "1     0\n",
+       "2    10\n",
+       "3     0\n",
+       "4     0\n",
+       "5     0\n",
+       "6     0\n",
+       "7     0\n",
+       "8     6\n",
+       "9     2\n",
+       "dtype: int32"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pnp.where(pnp>0, 0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62e8a470",
+   "metadata": {},
+   "source": [
+    "## Useful Methods"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "75361c9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "a    4\n",
+       "b    2\n",
+       "c    1\n",
+       "d    1\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "vlcnt = pd.Series(['a','b','a','c','b','a','d','a'])\n",
+    "vlcnt.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "b808d0d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    1.0\n",
+       "1    2.0\n",
+       "2    3.0\n",
+       "3    4.0\n",
+       "4    5.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "srsn = pd.Series([1,4,9,16,25])\n",
+    "srsn.apply(lambda x: np.sqrt(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "a45e8362",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "0.25\n",
+      "2\n",
+      "\n",
+      "0    10.0\n",
+      "2    10.0\n",
+      "1    20.0\n",
+      "7    20.0\n",
+      "3    30.0\n",
+      "5    40.0\n",
+      "4     NaN\n",
+      "6     NaN\n",
+      "dtype: float64\n",
+      "\n",
+      "0    10.0\n",
+      "1    20.0\n",
+      "2    10.0\n",
+      "3    30.0\n",
+      "5    40.0\n",
+      "7    20.0\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "nans = pd.Series([10, 20, 10, 30, np.nan, 40, np.nan, 20])\n",
+    "\n",
+    "print(nans.nunique())\n",
+    "print(nans.isnull().mean())\n",
+    "print(nans.isnull().sum())\n",
+    "print()\n",
+    "print(nans.sort_values())\n",
+    "print()\n",
+    "print(nans.dropna())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1086896b",
+   "metadata": {},
+   "source": [
+    "# 2.2.2: Pandas DataFrame, I/O, and Multi-Index - Exercises"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b02a2b7c",
+   "metadata": {},
+   "source": [
+    "## DataFrame Creation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "97ef6810",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: openpyxl in c:\\users\\asgar_b5z8lmb\\miniconda3\\envs\\ds\\lib\\site-packages (3.1.5)\n",
+      "Requirement already satisfied: et-xmlfile in c:\\users\\asgar_b5z8lmb\\miniconda3\\envs\\ds\\lib\\site-packages (from openpyxl) (2.0.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install openpyxl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "69a3049b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Product  Price  InStock\n",
+      "0   Apples    1.5     True\n",
+      "1  Oranges    1.2     True\n",
+      "2  Bananas    1.8    False\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "datappi0 = {\n",
+    "    'Product' : ['Apples','Oranges','Bananas'],\n",
+    "    'Price' : [1.5, 1.2, 1.8],\n",
+    "    'InStock' : [True,True,False],\n",
+    "}\n",
+    "\n",
+    "dtppi = pd.DataFrame(datappi0)\n",
+    "\n",
+    "print(dtppi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "50f0fb1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   ID     Name  Salary\n",
+      "0   1    Alice  100000\n",
+      "1   2      Bob   80000\n",
+      "2   3  Charlie  120000\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "datalist0 = [[1, 'Alice', 100000], [2, 'Bob', 80000], [3, 'Charlie', 120000]]\n",
+    "columnslist0 = ['ID','Name','Salary']\n",
+    "\n",
+    "dflst = pd.DataFrame(datalist0, columns=columnslist0)\n",
+    "print(dflst)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6abff932",
+   "metadata": {},
+   "source": [
+    "## Reading and Writing Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "96e34f48",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       Name  Salary\n",
+      "ID                 \n",
+      "1     Alice  100000\n",
+      "2       Bob   80000\n",
+      "3   Charlie  120000\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "dflst.to_csv('product.csv', index=False)\n",
+    "\n",
+    "dflst_from_csv = pd.read_csv('product.csv', index_col = 'ID')\n",
+    "\n",
+    "print(dflst_from_csv)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af0e5efe",
+   "id": "fefc5615",
    "metadata": {},
    "outputs": [],
    "source": []
